--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,10 +16,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up JDK
+    - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
-        java-version: '23'
+        java-version: '17'
         distribution: 'adoptopenjdk'
 
     - name: Cache Maven dependencies
